--- a/Ex2-Ekronot-IdoAlroy/Ex2-Ekronot-IdoAlroy.vcxproj
+++ b/Ex2-Ekronot-IdoAlroy/Ex2-Ekronot-IdoAlroy.vcxproj
@@ -135,12 +135,14 @@
     <ClCompile Include="test2User.cpp" />
     <ClCompile Include="test3Profile.cpp" />
     <ClCompile Include="Tester.cpp" />
+    <ClCompile Include="User.cpp" />
     <ClCompile Include="UserList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Device.h" />
     <ClInclude Include="DeviceList.h" />
     <ClInclude Include="ProfileList.h" />
+    <ClInclude Include="User.h" />
     <ClInclude Include="UserList.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
