--- a/Ex2-Ekronot-IdoAlroy/Ex2-Ekronot-IdoAlroy.vcxproj.filters
+++ b/Ex2-Ekronot-IdoAlroy/Ex2-Ekronot-IdoAlroy.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Device.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="User.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ProfileList.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DeviceList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="User.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
