implemented profile.h and profile.cpp

--- a/Ex2-Ekronot-IdoAlroy/Ex2-Ekronot-IdoAlroy.vcxproj
+++ b/Ex2-Ekronot-IdoAlroy/Ex2-Ekronot-IdoAlroy.vcxproj
@@ -130,6 +130,8 @@
     <ClCompile Include="Device.cpp" />
     <ClCompile Include="DeviceList.cpp" />
     <ClCompile Include="Ex2-Ekronot-IdoAlroy.cpp" />
+    <ClCompile Include="Page.cpp" />
+    <ClCompile Include="Profile.cpp" />
     <ClCompile Include="ProfileList.cpp" />
     <ClCompile Include="test1Device.cpp" />
     <ClCompile Include="test2User.cpp" />
@@ -141,6 +143,8 @@
   <ItemGroup>
     <ClInclude Include="Device.h" />
     <ClInclude Include="DeviceList.h" />
+    <ClInclude Include="Page.h" />
+    <ClInclude Include="Profile.h" />
     <ClInclude Include="ProfileList.h" />
     <ClInclude Include="User.h" />
     <ClInclude Include="UserList.h" />
