--- a/Ex2-Ekronot-IdoAlroy/Ex2-Ekronot-IdoAlroy.vcxproj
+++ b/Ex2-Ekronot-IdoAlroy/Ex2-Ekronot-IdoAlroy.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="Page.cpp" />
     <ClCompile Include="Profile.cpp" />
     <ClCompile Include="ProfileList.cpp" />
+    <ClCompile Include="SocialNetwork.cpp" />
     <ClCompile Include="test1Device.cpp" />
     <ClCompile Include="test2User.cpp" />
     <ClCompile Include="test3Profile.cpp" />
@@ -146,6 +147,7 @@
     <ClInclude Include="Page.h" />
     <ClInclude Include="Profile.h" />
     <ClInclude Include="ProfileList.h" />
+    <ClInclude Include="SocialNetwork.h" />
     <ClInclude Include="User.h" />
     <ClInclude Include="UserList.h" />
   </ItemGroup>
